--- a/app/src/main/res/drawable/v_wave.xml
+++ b/app/src/main/res/drawable/v_wave.xml
@@ -1,9 +1,11 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:width="1440dp"
     android:height="320dp"
     android:viewportWidth="1440"
-    android:viewportHeight="320">
-  <path
-      android:pathData="M0,192L34.3,181.3C68.6,171 137,149 206,165.3C274.3,181 343,235 411,218.7C480,203 549,117 617,85.3C685.7,53 754,75 823,101.3C891.4,128 960,160 1029,181.3C1097.1,203 1166,213 1234,186.7C1302.9,160 1371,96 1406,64L1440,32L1440,0L1405.7,0C1371.4,0 1303,0 1234,0C1165.7,0 1097,0 1029,0C960,0 891,0 823,0C754.3,0 686,0 617,0C548.6,0 480,0 411,0C342.9,0 274,0 206,0C137.1,0 69,0 34,0L0,0Z"
-      android:fillColor="@color/ColorPrimary"/>
+    android:viewportHeight="320"
+    tools:ignore="VectorRaster">
+    <path
+        android:fillColor="@color/ColorPrimary"
+        android:pathData="M0,192L34.3,181.3C68.6,171 137,149 206,165.3C274.3,181 343,235 411,218.7C480,203 549,117 617,85.3C685.7,53 754,75 823,101.3C891.4,128 960,160 1029,181.3C1097.1,203 1166,213 1234,186.7C1302.9,160 1371,96 1406,64L1440,32L1440,0L1405.7,0C1371.4,0 1303,0 1234,0C1165.7,0 1097,0 1029,0C960,0 891,0 823,0C754.3,0 686,0 617,0C548.6,0 480,0 411,0C342.9,0 274,0 206,0C137.1,0 69,0 34,0L0,0Z" />
 </vector>
