--- a/app/src/main/res/menu/btm_nav.xml
+++ b/app/src/main/res/menu/btm_nav.xml
@@ -3,14 +3,14 @@
 
     <item
         android:id="@+id/nav_food"
-        android:title="@string/home"
-        android:icon="@drawable/ic_baseline_pets_24"/>
+        android:icon="@drawable/ic_baseline_pets_24"
+        android:title="@string/home" />
     <item
         android:id="@+id/nav_chat"
-        android:title="@string/diskusi"
-        android:icon="@drawable/ic_chat"/>
+        android:icon="@drawable/ic_chat"
+        android:title="@string/diskusi" />
     <item
         android:id="@+id/nav_health"
-        android:title="@string/health"
-        android:icon="@drawable/ic_infokesehatan"/>
+        android:icon="@drawable/ic_infokesehatan"
+        android:title="@string/health" />
 </menu>
