--- a/app/src/main/res/layout/fragment_kesehatan.xml
+++ b/app/src/main/res/layout/fragment_kesehatan.xml
@@ -40,6 +40,17 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvkesehatanfragment" />
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/RVFragFood"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/view_kesehatan"
+        tools:listitem="@layout/rv_sehat" />
+
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
