--- a/app/src/main/res/layout/fragment_kesehatan.xml
+++ b/app/src/main/res/layout/fragment_kesehatan.xml
@@ -41,7 +41,7 @@
         app:layout_constraintTop_toBottomOf="@+id/tvkesehatanfragment" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/RVFragFood"
+        android:id="@+id/RVKesehatan"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
