--- a/app/src/main/res/layout/activity_info_grooming.xml
+++ b/app/src/main/res/layout/activity_info_grooming.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".InfoGrooming">
+    tools:context=".GroomingActivity">
 
     <ImageView
         android:id="@+id/RVGrooming"
@@ -14,14 +14,15 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:src="@drawable/grooming"/>
+        tools:src="@drawable/grooming"
+        tools:ignore="ContentDescription" />
 
     <TextView
         android:id="@+id/tv_item_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="Tips Grooming Dengan Baik"
+        tools:text="Tips Grooming Dengan Baik"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -29,7 +30,7 @@
         app:layout_constraintTop_toBottomOf="@+id/RVGrooming" />
 
     <TextView
-        android:id="@+id/tv_item_description"
+        android:id="@+id/tv_item_descrption"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
