Test -> RV : Error Layout + Belum Implementasi Handler Pesan + Send Msg Done

--- a/app/src/main/res/layout/rv_food.xml
+++ b/app/src/main/res/layout/rv_food.xml
@@ -4,7 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:gravity="center_vertical"
+    android:paddingTop="5dp"
     android:layout_marginStart="5dp"
+    android:paddingBottom="5dp"
     android:layout_marginTop="5dp"
     android:layout_marginEnd="5dp"
     android:background="@color/white">
@@ -21,11 +24,11 @@
         tools:ignore="ContentDescription" />
 
     <LinearLayout
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="5dp"
         android:layout_width="match_parent"
         android:orientation="vertical"
-        android:layout_height="match_parent">
+        android:layout_marginEnd="10dp">
 
         <TextView
             android:id="@+id/tvHeading"
