--- a/app/src/main/res/layout/rv_sehat.xml
+++ b/app/src/main/res/layout/rv_sehat.xml
@@ -6,6 +6,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_marginStart="5dp"
     android:layout_marginTop="5dp"
+    android:gravity="center_vertical"
     android:layout_marginEnd="5dp"
     android:background="@color/white">
 
@@ -19,12 +20,13 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="ContentDescription" />
+
     <LinearLayout
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_width="match_parent"
         android:orientation="vertical"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
         <TextView
             android:id="@+id/tvHeading"
@@ -39,10 +41,11 @@
 
         <Button
             android:id="@+id/btn_selengkapnya"
-            android:layout_width="214dp"
-            android:layout_height="35dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:text="Lihat Selengkapnya"
-            android:textColor="@color/white">
+            android:textColor="@color/white"
+            tools:ignore="HardcodedText">
 
         </Button>
 
